Fix Bug, it was appending a new line

--- a/.github/workflows/toggle_json.yml
+++ b/.github/workflows/toggle_json.yml
@@ -19,7 +19,7 @@ jobs:
           |
           # File Path
           # yq command to handle Yaml files, -i: inplace
-          yq -i '.isCool = (.isCool | not)' ./settings_files/sample.yaml
+          yq -i '.config[0].isCool = (.config[0].isCool | not)' ./settings_files/sample.yaml
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v8
