--- a/.github/workflows/toggle_json.yml
+++ b/.github/workflows/toggle_json.yml
@@ -8,7 +8,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  toggle-yaml-flag:
+  toggle-json-flag:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -18,8 +18,8 @@ jobs:
         run:
           |
           # Targets "Value" and flips it
-          # |=: The "update" operator, !. represent NOT -> current value, then dump output to a file.
-          jq '.Value |= !.' ./settings_files/sample.json > temp.json && mv temp.json ./settings_files/sample.json
+          # |=: The "update" operator, not to negate -> current value, then dump output to a file.
+          jq '.Value |= not' ./settings_files/sample.json > temp.json && mv temp.json ./settings_files/sample.json
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v8
