--- a/.github/workflows/matrix-python-test.yml
+++ b/.github/workflows/matrix-python-test.yml
@@ -16,7 +16,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
     - name: Checkout Code
@@ -28,6 +28,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     
     - name: Display Python version
+        # -c to run Code passed as string argument
       run: python -c "import sys; print(sys.version)"
     
     - name: Install dependencies
