--- a/.github/workflows/toggle_yaml.yml
+++ b/.github/workflows/toggle_yaml.yml
@@ -23,7 +23,7 @@ jobs:
           # yq -i '.config[].isCool |= not' config.yml # --> ALL Characters with Is Cool will change
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v8
+        uses: peter-evans/create-pull-request@2271f1ddcf09437ed8f019733eb5cfba58ac76f0
         with:
           commit-message: "Toggle isCool status"
           title: "Automatic Toggle of isCool Flag"
